@@ -730,12 +730,10 @@ static int _message(int argc, char **argv, void *data __attribute__((unused)))
 	for (i = 0; i < argc; i++)
 		sz += strlen(argv[i]) + 1;
 
-	if (!(str = dm_malloc(sz))) {
+	if (!(str = dm_zalloc(sz))) {
 		err("message string allocation failed");
 		goto out;
 	}
-
-	memset(str, 0, sz);
 
 	for (i = 0; i < argc; i++) {
 		if (i)
